@@ -229,7 +229,7 @@ if (!window.console || !console.firebug) {
 	<div id="xo-footer">
 	<div id="banner" style="margin-left: auto; margin-right: auto;"><{$icms_banner}>
 	<br />
-	<{$icms_footer}>
+	<{$icms_footadm}>
 	</div>
 	</div>
 </body>
