@@ -217,7 +217,7 @@ if (!window.console || !console.firebug) {
 	</div>
 	<!-- Footer -->
 	<div id="icms-footer">
-		<{$icms_footer}>
+		<{$icms_footadm}>
 	</div>
 </div>
 
