@@ -15,6 +15,7 @@ Revision:
 * #844 Removed Symlink to old content page (realtherplima)
 * #845 loading selected language files during module installation (iCMS installer) (Phoenyx)
 * #848 assign correct language constant in upgrade for blocksadmin symlink (skenow)
+* #851 using the admin footer for all admin themes (Phoenyx)
 
 === ImpressCMS 1.2 RC 1 ===
 Release date: 20 Nov 2009
